# ED_doqsi

./: .gitignore  CMakeLists.txt  cellbuilder.hpp  cluster12.cpp  cluster12_full.cpp  pyro16.cpp  pyro16.py  pyro16_0field.cpp  pyro16_full.cpp  pyro16_syms.cpp  pyro32.cpp  pyrochlore_geometry.hpp  rationalmath.hpp  ring_ED.cpp  tt.txt  vec3.hpp
scripts/: execute_pyrochlore_plan.py  general_pyro.ipynb  lat_symmetry.ipynb  lattice.py  old_out_pyro_1,0,0;0,1,0;0,0,1.json  out_pyro_1,-1,-1;-1,1,-1;-1,-1,1.json  plan_pyro_generic.py  process.ipynb  pyro_generic.py  pyro_ham_construct.py  pyrochlore.py  visual.py
tests/: heischain.cpp  rationalmath.cpp  tfim.cpp  tfim_no_sym.cpp
